Bug 401996 - clicking contact web url => uncomplete url is selected
Summary: clicking contact web url => uncomplete url is selected
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-11 11:13 UTC by Philippe ROUBACH
Modified: 2019-04-05 06:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.57.0
Sentry Crash Report:


Attachments
we see url is selected but uncompletely (180.01 KB, image/png)
2018-12-11 11:13 UTC, Philippe ROUBACH
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2018-12-11 11:13:29 UTC
Created attachment 116855 [details]
we see url is selected but uncompletely

SUMMARY


STEPS TO REPRODUCE
1. display a contact
2. click on url as
http://www.chu-bordeaux.fr/Les-services/Service-de-Radiologie-et-d-imagerie-diagnostique-et-interventionnelle-(Saint-André)



OBSERVED RESULT

FF is launched
with the url
https://www.chu-bordeaux.fr/Les-services/Service-de-Radiologie-et-d-imagerie-diagnostique-et-interventionnelle

EXPECTED RESULT

FF is  launched
with the url
http://www.chu-bordeaux.fr/Les-services/Service-de-Radiologie-et-d-imagerie-diagnostique-et-interventionnelle-(Saint-André)

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.12.6
KDE Frameworks Version: 5.45.0
Qt Version: 5.9.4

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2018-12-11 12:20:15 UTC
When you click it's ok ?
Comment 2 Philippe ROUBACH 2018-12-11 12:27:58 UTC
i don't understand your question.

in description said

OBSERVED RESULT

FF is launched
with the url
https://www.chu-bordeaux.fr/Les-services/Service-de-Radiologie-et-d-imagerie-diagnostique-et-interventionnelle
Comment 3 blackfireburn 2018-12-15 23:13:12 UTC
so the issue is the end -(Saint-André) is ignored 

recreated the issue in kde neon
Kontact
Version 5.10.0
KDE Frameworks 5.53.0
Qt 5.11.2 (built against 5.11.2)

recreated the issue with the same url and also tested with 
http://google.com/test-(thisisatest)
the characters 

-(thisisatest)

are ignored when clicking
i removed "-" and it is still ignoring the (thisisatest)
Comment 4 Philippe ROUBACH 2019-02-13 14:09:35 UTC
kaddressbook 5.10.2

problem still there
Comment 5 Laurent Montel 2019-04-05 05:59:57 UTC
it's a bug in kcoreaddons.
I will investigate it
Comment 6 Laurent Montel 2019-04-05 06:12:27 UTC
Git commit 7e96b4cee76ba7de73b2e69bfe79c25f8afa5ea9 by Laurent Montel.
Committed on 05/04/2019 at 06:12.
Pushed by mlaurent into branch 'master'.

Fix Bug 401996 - clicking contact web url => uncomplete url is selected

(Fixed in kcoreaddons)
FIXED-IN: 5.57.0

M  +8    -0    autotests/kstringhandlertest.cpp
M  +1    -1    src/lib/text/kstringhandler.cpp

https://commits.kde.org/kcoreaddons/7e96b4cee76ba7de73b2e69bfe79c25f8afa5ea9