Fix Bug 401996 - clicking contact web url => uncomplete url is selected

(Fixed in kcoreaddons)
BUG: 401996
FIXED-IN: 5.57.0